CVS HEAD
  * Added option for default actions when channel is created
    (choose Edit/Preferences, then click the `Defaults' tab)

  * A lists of recently used instrument files, directories,
    database instruments, database directories are now available
    for quick access, where appropriate.

  * The locations of the last loaded instrument, last scanned
    instrument/directory, last added instrument to orchestra are
    now saved for the next session

  * Bug fixes:
    - fixed bug #49
    - the first loaded script was not always been executed

JSampler v0.6a: 2007-08-10
  * The Fantasia distribution is now capable of
    controlling all features available in LinuxSampler

  * Refactoring: all common UI components are moved
    to a new package - org.jsampler.view.std

  * Some GUI enhancements, bugfixes and code cleanup.

JSampler v0.5a: 2007-05-24
  * Implemented instruments database support
  * Added context menu to the MIDI instrument tree

JSampler v0.4a: 2007-04-02
  * Added support for MIDI instrument mapping

  * Added support for effect sends

  * Implemented export of the current sampler configuration
    to LSCP script (Actions/Export/Sampler Configuration or Ctrl + S)

  * The JSampler's data is now stored in a user specified location.
    To change the JSampler's home directory choose Edit/Preferences.

  * Implemented Global Controls bar (View/Global Controls).
    
  * Saving the LS Console's command history on exit is now optional.
    (Edit/Preferences, then click the `LS Console' tab)

  * Some GUI enhancements, bugfixes and code cleanup.

JSampler v0.3a: 2006-08-07
  * Partially implemented a new view - Fantasia
    (Graphic design: Olivier Boyer).
  
  * Implemented LS Console with command autocompletion
    (using the Tab key), command history (using Up, Down keys),
    command history search (Ctrl + R), command list search (Ctrl + F).
    To edit the console settings (colors, command history size, etc),