@@ -123,7 +123,9 @@ JSDbSearchPane.sizeCriteria = What size is it?
 JSDbSearchPane.typeCriteria = What to look for?
 
 JSDefaultsPropsPane.checkChannelDefaults = Use default actions when chanel is created
+JSDefaultsPropsPane.titleAudioDriver = Default audio output driver
 JSDefaultsPropsPane.titleChannels = Sampler channels
+JSDefaultsPropsPane.titleMidiDriver = Default MIDI input driver
 
 JSEditMidiInstrumentDlg.lEngine = Engine:
 JSEditMidiInstrumentDlg.lFilename = Filename:
